# diploma-recommendation-system

./: .env  .gitignore  Application.toml  Cargo.toml  LICENSE
src/: main.rs
src/app/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/processor/: learning.rs  mod.rs  products.rs  recommender.rs  request.rs  result.rs
