[package]
name = "recommendation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
toml = "0.5.9"
serde = { version="1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.81"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "any", "macros", "postgres", "mysql", "sqlite", "mssql"] }
futures = "0.3.21"
tokio = {version = "1.18.2", features = ["full"]}

polars = "0.21.1"
polars-core = {version = "0.21.1", features = ["ndarray" ,"rows"] }
smartcore = "0.2.1"

fuzzy-matcher = "0.3.7"